clean and import multi converter base layout

--- a/application/wem/templates/errorlayout.html
+++ b/application/wem/templates/errorlayout.html
@@ -1,1 +1,9 @@
-error to do
+
+{% extends "main_layout.html" %}
+
+{% block title %}
+{{title}}
+{% endblock %}
+{% block content %}
+{{header}}
+{% endblock %}
