--- a/application/wem/static/css/style.css
+++ b/application/wem/static/css/style.css
@@ -1,796 +1,49 @@
-@font-face {
-	font-weight: normal;
-	font-style: normal;
-	font-family: 'codropsicons';
-	src: url("../fonts/codropsicons/codropsicons.eot");
-	src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("../fonts/codropsicons/codropsicons.woff") format("woff"), url("../fonts/codropsicons/codropsicons.ttf") format("truetype"), url("../fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
-}
-
-@font-face {
-	font-family: 'camera-icons';
-	src: url("../fonts/camera-icons/camera-icons.eot?7h6q4p");
-	src: url("../fonts/camera-icons/camera-icons.eot?#iefix7h6q4p") format("embedded-opentype"), url("../fonts/camera-icons/camera-icons.woff?7h6q4p") format("woff"), url("../fonts/camera-icons/camera-icons.ttf?7h6q4p") format("truetype"), url("../fonts/camera-icons/camera-icons.svg?7h6q4p#camera-icons") format("svg");
-	font-weight: normal;
-	font-style: normal;
-}
-
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.clearfix:before,
-.clearfix:after {
-	display: table;
-	content: '';
-}
-
-.clearfix:after {
-	clear: both;
-}
-
 body {
-	font-family: "Avenir Next", Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
-	color: #fff;
-	background: #252323;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	width: 100vw;
+  padding-top: 70px;
+  padding-bottom: 30px;
 }
 
-a {
-	outline: none;
-	color: #77d45b;
-	text-decoration: none;
-}
-
-a:hover,
-a:focus {
-	color: #fff;
-}
-
-button:focus {
-	outline: none;
-}
-
-.hidden {
-	position: absolute;
-	overflow: hidden;
-	width: 0;
-	height: 0;
-	pointer-events: none;
-}
-
-
-/* Header */
-
-.codrops-header {
-	padding: 2em 1em 4em;
-	text-align: center;
-}
-
-.codrops-header h1 {
-	margin: 0.5em 0 0;
-	letter-spacing: -1px;
-	font-size: 3em;
-	line-height: 1;
-	font-weight: normal;
-}
-
-.codrops-header h1 span {
-	display: block;
-	padding: 0.5em 0 1em;
-	color: #999;
-	font-weight: normal;
-	font-size: 0.45em;
-	letter-spacing: 0;
-}
-
-
-/* Top Navigation Style */
-
-.codrops-links {
-	position: relative;
-	display: inline-block;
-	text-align: center;
-	white-space: nowrap;
-}
-
-.codrops-links::after {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 1px;
-	height: 100%;
-	background: rgba(255, 255, 255, 0.1);
-	content: '';
-	-webkit-transform: rotate3d(0, 0, 1, 22.5deg);
-	transform: rotate3d(0, 0, 1, 22.5deg);
-}
-
-.codrops-icon {
-	display: inline-block;
-	margin: 0.5em;
-	padding: 0em 0;
-	width: 1.5em;
-	text-decoration: none;
-}
-
-.codrops-icon span {
-	display: none;
-}
-
-.codrops-icon:before {
-	margin: 0 5px;
-	text-transform: none;
-	font-weight: normal;
-	font-style: normal;
-	font-variant: normal;
-	font-family: 'codropsicons';
-	line-height: 1;
-	speak: none;
-	-webkit-font-smoothing: antialiased;
-}
-
-.codrops-icon--drop:before {
-	content: "\e001";
-}
-
-.codrops-icon--prev:before {
-	content: "\e004";
-}
-
-
-/* Demo links */
-
-.codrops-demos {
-	margin: 2em 0 0;
-}
-
-.codrops-demos a {
-	display: inline-block;
-	margin: 0 0.5em;
-}
-
-.codrops-demos a.current-demo {
-	color: #fff;
-}
-
-
-/* Content */
-
-.content {
-	padding: 1em 0 3em;
-	max-width: 1080px;
-	margin: 0 auto;
-}
-
-
-/* Related demos */
-
-.content--related {
-	text-align: center;
-	font-weight: bold;
-	padding: 0 1em;
-}
-
-.media-item {
-	display: inline-block;
-	padding: 1em;
-	vertical-align: top;
-	-webkit-transition: color 0.3s;
-	transition: color 0.3s;
-}
-
-.media-item__img {
-	max-width: 100%;
-	opacity: 0.3;
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-
-.media-item:hover .media-item__img,
-.media-item:focus .media-item__img {
-	opacity: 1;
-}
-
-.media-item__title {
-	margin: 0;
-	padding: 0.5em;
-	font-size: 1em;
-}
-
-
-/* Demo ad style */
-
-body #cdawrap {
-	top: 15px;
-	right: auto;
-	left: 15px;
-	background-color: rgba(0, 0, 0, 0.6);
-	border: none;
-}
-
-body #cdawrap .carbon-text {
-	color: #EBEBEB;
-}
-
-@media screen and (max-width: 50em) {
-	.codrops-header {
-		padding: 2em 5%;
-	}
-}
-
-@media screen and (max-width: 40em) {
-	.codrops-header h1 {
-		font-size: 2.15em;
-	}
-}
-
-
-/*************************************************************/
-/* STYLISH AND POLISH CSS IMAGE CARD
-/*************************************************************/
-
-.grid {
-	position: relative;
-	margin: 0 auto;
-}
-
-.js .grid::after {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	pointer-events: none;
-	background: #252323 url(../img/loading.svg) no-repeat 50% 75px;
-	background-size: 60px auto;
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-
-.js .grid--loaded::after {
-	opacity: 0;
-}
-
-.grid__item {
-	width: 270px;
-	padding: 10px;
-}
-
-.grid__item--current {
-	opacity: 0 !important;
-}
-
-.img-wrap {
-	display: block;
-}
-
-.img-wrap:focus,
-.img-wrap:hover {
-	outline: none;
-}
-
-.img-wrap img {
-	display: block;
+#base-code {
 	max-width: 100%;
 }
 
-.preview {
-	position: fixed;
-	z-index: 1000;
-	top: 0;
-	left: 0;
-	display: -ms-flex;
-	display: -webkit-flex;
-	display: flex;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-ms-flex-line-pack: center;
-	-webkit-align-content: center;
-	align-content: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	align-items: center;
-	width: 50%;
-	height: 100%;
-	pointer-events: none;
+#results-content .result-panel {
+  cursor: move;
 }
 
-.preview::before {
-	content: '';
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	background: #1f1d1d;
-	-webkit-transition: opacity 0.6s;
-	transition: opacity 0.6s;
+.unselectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
-.preview--open {
-	pointer-events: auto;
+.full-width {
+  width: 100%;
 }
 
-.preview--open::before {
-	opacity: 1;
+#piping-result .panel-title {
+  line-height: 22px;
 }
 
-.clone {
-	position: fixed;
-	z-index: 110;
-	-webkit-transition: -webkit-transform 0.5s;
-	transition: transform 0.5s;
-	-webkit-backface-visibility: hidden;
+#droppable-result {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 4px dashed #eee;
+  height: 5em;
+  margin-bottom: 15px;
+  color: #ccc;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-.original {
-	position: relative;
-	z-index: 120;
-	display: block;
-	object-fit: contain;
-	-webkit-transition: opacity 0.2s;
-	transition: opacity 0.2s;
-	-webkit-backface-visibility: hidden;
+#droppable-result.piping-result {
+  justify-content: flex-start;
+  border: 0px;
+  height: auto;
 }
 
-.preview--open .animate {
-	/* open */
-	-webkit-transition: -webkit-transform 0.6s, opacity 0.2s;
-	transition: transform 0.6s, opacity 0.2s;
-}
-
-.animate {
-	/* close */
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
-	transition: transform 0.3s, opacity 0.2s;
-}
-
-.description {
-	color: #fff;
-}
-
-.description--grid {
-	display: none;
-}
-
-.description--preview {
-	font-size: 2em;
-	position: absolute;
-	z-index: 140;
-	width: 100%;
-	left: 100%;
-	top: 0;
-	height: 100%;
-	padding: 0 1em;
-	display: -ms-flex;
-	display: -webkit-flex;
-	display: flex;
-	-ms-flex-direction: column;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-ms-flex-align: start;
-	-webkit-align-items: flex-start;
-	align-items: flex-start;
-	opacity: 0;
-	-webkit-transition: opacity 1s, -webkit-transform 1s;
-	transition: opacity 1s, transform 1s;
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	-webkit-transform: translate3d(0, 30px, 0);
-	transform: translate3d(0, 30px, 0);
-}
-
-.preview--open .description--preview {
-	opacity: 1;
-	-webkit-transition-delay: 0.2s;
-	transition-delay: 0.2s;
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.description--preview h3 {
-	font-weight: normal;
-	margin: 0;
-}
-
-.description--preview p {
-	font-size: 0.65em;
-	max-width: 100%;
-}
-
-.description--preview p em {
-	color: #5D5D5D;
-	display: block;
-	padding: 0.4em 0 0 0;
-}
-
-
-/* Details */
-
-.details {
-	max-width: 100%;
-	/* IE 10-11 bug flexbox */
-}
-
-.details ul {
-	line-height: 1;
-	position: relative;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.details ul li {
-	font-size: 0.5em;
-	position: relative;
-	display: inline-block;
-	margin: 0 1em 0 0;
-	padding: 0.15em 0;
-	white-space: nowrap;
-	opacity: 0;
-	color: #9d9d9d;
-	-webkit-transition: -webkit-transform 1s, opacity 1s;
-	transition: transform 1s, opacity 1s;
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	-webkit-transform: translate3d(0, 20px, 0);
-	transform: translate3d(0, 20px, 0);
-}
-
-.preview--open .details ul li {
-	opacity: 1;
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.preview--open .details ul li:nth-child(1) {
-	-webkit-transition-delay: 0.2s;
-	transition-delay: 0.2s;
-}
-
-.preview--open .details ul li:nth-child(2) {
-	-webkit-transition-delay: 0.3s;
-	transition-delay: 0.3s;
-}
-
-.preview--open .details ul li:nth-child(3) {
-	-webkit-transition-delay: 0.4s;
-	transition-delay: 0.4s;
-}
-
-.preview--open .details ul li:nth-child(4) {
-	-webkit-transition-delay: 0.5s;
-	transition-delay: 0.5s;
-}
-
-.preview--open .details ul li:nth-child(5) {
-	-webkit-transition-delay: 0.6s;
-	transition-delay: 0.6s;
-}
-
-.details ul li:first-child {
-	font-weight: bold;
-	color: #909090;
-}
-
-.icon {
-	font-family: 'camera-icons';
-	font-weight: normal;
-	font-style: normal;
-	font-variant: normal;
-	line-height: 1;
-	display: inline-block;
-	vertical-align: middle;
-	text-transform: none;
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	speak: none;
-}
-
-.icon + span {
-	margin-left: 5px;
-	vertical-align: middle;
-}
-
-.icon-focal_length:before {
-	content: '\e600';
-}
-
-.icon-exposure_time:before {
-	content: '\e601';
-}
-
-.icon-iso:before {
-	content: '\e602';
-}
-
-.icon-camera:before {
-	content: '\e603';
-}
-
-.icon-aperture:before {
-	content: '\e604';
-}
-
-.details .icon {
-	margin-right: 5px;
-	color: #77d45b;
-}
-
-
-/* Close button */
-
-.action {
-	font-size: 1.5em;
-	margin: 0;
-	padding: 0;
-	cursor: pointer;
-	vertical-align: top;
-	color: #6bd68a;
-	border: none;
-	background: none;
-}
-
-.action:hover,
-.action:focus {
-	color: #6bd68a;
-	outline: none;
-}
-
-.action--close {
-	position: fixed;
-	z-index: 150;
-	top: 40px;
-	right: 0;
-	padding: 1em;
-	opacity: 0;
-	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-	transition: opacity 0.3s, transform 0.3s;
-	-webkit-transform: scale3d(0.6, 0.6, 1);
-	transform: scale3d(0.6, 0.6, 1);
-}
-
-.preview--image-loaded .action--close {
-	opacity: 1;
-	-webkit-transform: scale3d(1, 1, 1);
-	transform: scale3d(1, 1, 1);
-}
-
-.text-hidden {
-	position: absolute;
-	display: block;
-	overflow: hidden;
-	width: 0;
-	height: 0;
-	color: transparent;
-}
-
-@media screen and (max-width: 40em) {
-	.description--preview h3 {
-		font-size: 0.5em;
-	}
-	.description--preview p,
-	.details {
-		display: none;
-	}
-}
-
-/*----------------------*/
-/* LOGIN FORM           */
-/*----------------------*/
-
-.loginmodal-container {
-    padding: 30px;
-    max-width: 350px;
-    width: 100% !important;
-    background-color: #F7F7F7;
-    margin: 0 auto;
-    border-radius: 2px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    font-family: roboto;
-    color:black;
-}
-
-.loginmodal-container h1 {
-    text-align: center;
-    font-size: 1.8em;
-    font-family: roboto;
-}
-
-.loginmodal-container input[type=submit] {
-    width: 100%;
-    display: block;
-    margin-top: 5px;
-    position: relative;
-}
-
-.loginmodal-container input[type=text], input[type=password] {
-    height: 44px;
-    font-size: 16px;
-    width: 100%;
-    margin-bottom: 10px;
-    -webkit-appearance: none;
-    background: #fff;
-    border: 1px solid #d9d9d9;
-    border-top: 1px solid #c0c0c0;
-    /* border-radius: 2px; */
-    padding: 0 8px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-}
-
-.loginmodal-container input[type=text]:hover, input[type=password]:hover {
-    border: 1px solid #b9b9b9;
-    border-top: 1px solid #a0a0a0;
-    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-
-.loginmodal-submit {
-    /* border: 1px solid #3079ed; */
-    border: 0px;
-    color: #fff;
-    text-shadow: 0 1px rgba(0,0,0,0.1);
-    background-color: #4d90fe;
-    padding: 17px 0px;
-    font-family: roboto;
-    font-size: 14px;
-    /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-}
-
-.loginmodal-submit:hover {
-    border: 1px solid #2f5bb7;
-    border: 0px;
-    text-shadow: 0 1px rgba(0,0,0,0.3);
-    background-color: #357ae8;
-    /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-}
-
-.login-errors{
-    font-size:11px;
-    text-align: center;
-    padding-bottom:5px;
-    color: #CF000F;
-}
-
-
-.wrapper{
-    position: relative;
-    min-height: 100%;
-    height: auto !important;
-    margin: 0px 0px -38px 0px; /* same as the footer */
-    padding-bottom:50px;
-}
-/*----------------------*/
-/* FOOTER               */
-/*----------------------*/
-
-footer {
-    background-color: #222;
-    border: 1px solid #080808;
-    bottom: 0;
-    width: 100%;
-    position: relative;
-    display:block;
-}
-.container-footer{
-    width: auto;
-    padding: 10px 15px;
-}
-
-#git-version{
-    text-align:center;
-    font-size:11px;
-    color:#34495e;
-}
-
-/*----------------------*/
-/* EDITOR               */
-/*----------------------*/
-
-#text, .md-preview{
-    color:#555;
-    padding:10px;
-}
-
-legend{
-    color:white;
-}
-
-textarea {
-    width:100% !important;
-    border: 1px solid #ccc;
-}
-/*----------------------*/
-/* BODY                 */
-/*----------------------*/
-html,
-body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
-}
-
-.row{
-    margin-right: 0px;
-    margin-left: 0px;
-}
-
-.row::after{
-    padding-bottom: 30px;
-}
-
-.flair-slut {
-    animation: slut_anim 1s infinite;
-    background-color: #ff66cc;
-    color: cyan;
-    border-color: cyan;
-    box-shadow: 0px 0px 15px #ff00ff;
-}
-@keyframes slut_anim {
-    0% {
-        background-color: #ff66cc;
-        color: cyan;
-        border-color: cyan;
-        box-shadow: 0px 0px 15px #ff00ff;
-    }
-    50% {
-        background-color: cyan;
-        color: #ff66cc;
-        border-color: #ff66cc;
-        box-shadow: 0px 0px 15px cyan;
-    }
-    100% {
-        background-color: #ff66cc;
-        color: cyan;
-        border-color: cyan;
-        box-shadow: 0px 0px 15px #ff00ff;
-    }
-}
-.red
-{
-    background-color: red;
-}
-.blue
-{
-    background-color: blue;
-}
-.green
-{
-    background-color: green;
-}
-.grey
-{
-    background-color: grey;
-}
-.black
-{
-    background-color: black;
-}
-.cyan
-{
-    background-color: cyan;
-}
-.purple
-{
-    background-color: purple;
-}
-.pink
-{
-    background-color: pink;
+#droppable-result.droppable-result-highlight {
+  border-color: rgb(51, 122, 183);
 }
