--- a/application/wem/templates/index.html
+++ b/application/wem/templates/index.html
@@ -1,75 +1,110 @@
-{% extends "main_layout.html" %}
+{% extends "main_layout.html" %} {% block title %} Converter! {% endblock %} {% block content %}
 
-{% block title %}
-    Converter!
-{% endblock %}
-{% block content %}
+<!-- Fixed navbar -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header navbar-center">
+      <form class="col-xs-8 col-xs-offset-4">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="search key words">
+        </div>
+        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+      </form>
+    </div>
+  </div>
+</nav>
 
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" 
-          class="navbar-toggle collapsed" 
-          data-toggle="collapse" 
-          data-target="#navbar" 
-          aria-expanded="false" 
-          aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Mutli Converter</a>
+<div id="main-content" class="container theme-showcase" role="main">
+
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="panel panel-default">
+        <div class="panel-body">
+
+          <h4>Categories</h4>
+          <div class="categories-container">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="">
+                web
+              </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="">
+                crypto
+              </label>
+            </div>
+          </div>
+
+          <h4>Languages</h4>
+          <div class="languages-container"></div>
+
+          <h4>Display</h4>
+          <div class="display-container">
+            <div class="radio">
+              <label>
+                <input type="radio" name="displayOption" id="optionsRadios1" value="simple" checked>
+                Simple
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="displayOption" id="optionsRadios2" value="complete">
+                Complete
+              </label>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
-  </nav>
-
-  <div id="main-content" class="container theme-showcase" role="main">
-
-    <div id="alert-content"></div>
-
-    <p class="lead">
-      Shortcut:
-      <span class="label label-success">V</span> Convert
-      <span class="label label-warning">C</span> Clear
-    </p>
-
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">Multi Converter</h3>
+    <div class="col-xs-8">
+      <div id="alert-content"></div>
+      <div id="spinner">
+        <i class="glyphicon glyphicon-hourglass"></i>
       </div>
-      <div class="panel-body">
-        <form id="convert-form">
-          <div class="form-group">
-            <span class="help-block">Choose your input format</span>
-            <div id="formats-controls"></div>
+      <div id="no-results">
+        no results found
+      </div>
+      <div id="results">
+
+        <div class="panel panel-default result-simple result-tool">
+          <div class="panel-body">
+            <h3><i class="glyphicon glyphicon-link"></i>&nbsp;<a href="#" target="_blank">http://localhost:8008/#</a></h3>
+            <p>Description</p>
           </div>
-          <div class="form-group">
-            <label for="base-code">Code</label>
-            <textarea autofocus 
-              id="base-code" 
-              class="form-control" 
-              name="base-code" 
-              required="required" 
-              placeholder="Paste your code..." 
-              rows="12"></textarea>
+        </div>
+
+        <div class="panel panel-default result-complete result-url">
+          <div class="panel-body">
+            <h3><i class="glyphicon glyphicon-link"></i>&nbsp;<a href="#" target="_blank">http://localhost:8008/#</a></h3>
+            <p>
+              <i class="glyphicon glyphicon-tags"></i>&nbsp;
+              <span class="label label-default">Default</span>
+              <span class="label label-primary">Primary</span>
+              <span class="label label-success">Success</span>
+              <span class="label label-info">Info</span>
+              <span class="label label-warning">Warning</span>
+              <span class="label label-danger">Danger</span></p>
+            <p>Description</p>
           </div>
-          <div id="piping-result"></div>
-          <div id="droppable-result">
-            <span>Drop a result to create a pipeline</span>
-          </div>
-          <button id="convert-submit" type="submit" class="btn btn-primary">Convert</button>
-          <button id="reset-btn" type="button" class="btn btn-warning">Clear</button>
-        </form>
+        </div>
+
+      </div>
+      <div class="footer">
+        Copyright &copy; 2017 N. Huguenin, M. Caraccio and J. Gugger – All Rights Reserved.
       </div>
     </div>
+  </div>
 
-    <div id="results-header" class="page-header">
-      <h1>Results</h1>
-    </div>
-    <div id="results-content" class="row"></div>
+</div>
+<!-- /container -->
 
-  </div> <!-- /container -->
+
+<div id="loading-page">
+  <i class="glyphicon glyphicon-refresh"></i>
+</div>
+
 
 {% endblock %}
