--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -6,9 +6,9 @@
     <div class="navbar-header navbar-center">
       <form class="col-xs-8 col-xs-offset-4">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="search key words">
+          <input id="search-input" type="text" class="form-control" placeholder="search key words">
         </div>
-        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+        <button id="search-button" type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
       </form>
     </div>
   </div>
@@ -65,7 +65,7 @@
         <i class="glyphicon glyphicon-hourglass"></i>
       </div>
       <div id="no-results">
-        no results found
+        no result found
       </div>
       <div id="results">
 
