insert filters in query

--- a/application/backend/static/scripts/templates/checkbox.html
+++ b/application/backend/static/scripts/templates/checkbox.html
@@ -1,6 +1,6 @@
 <div class="checkbox">
   <label>
-    <input type="checkbox" data-value="name">
+    <input type="checkbox" name="filters[]" data-value="name">
     <span data-content-text="name"></span>
   </label>
 </div>
