--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -22,26 +22,13 @@
     <div class="col-xs-4 options-col">
       <div class="panel panel-default">
         <div class="panel-body">
+          <form action="GET" id="filters-form">
+            <h4>Categories</h4>
+            <div class="categories-container"></div>
 
-          <h4>Categories</h4>
-          <div class="categories-container">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="">
-                web
-              </label>
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="">
-                crypto
-              </label>
-            </div>
-          </div>
-
-          <h4>Languages</h4>
-          <div class="languages-container"></div>
-
+            <h4>Languages</h4>
+            <div class="languages-container"></div>
+          </form>
           <h4>Display</h4>
           <div class="display-container">
             <div class="radio">
