--- a/application/backend/static/css/style.css
+++ b/application/backend/static/css/style.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 30px;
 }
 
+nav.navbar {
+  box-shadow: 0px -15px 10px 30px #fff;
+}
+
 .container .navbar-center {
   float: none;
   margin-right: -15px;
@@ -30,6 +34,11 @@ body {
   display: inline-block;
   margin-bottom: 0;
   vertical-align: middle;
+}
+
+.panel {
+  border: 1px solid rgba(0,0,0,.05);
+  box-shadow: 0 2px 2px rgba(0,0,0,.05);
 }
 
 
