--- a/application/backend/static/scripts/templates/results-complete.html
+++ b/application/backend/static/scripts/templates/results-complete.html
@@ -1,11 +1,12 @@
 <div class="panel panel-default result-simple">
   <div class="panel-body">
-    <h3 data-content="title"></h3>
+    <h3 class="big"><span class="label label-info" data-content="score" data-format="RoundFormatter"></span> <span data-content="title"></span></h3>
     <h4><i class="glyphicon glyphicon-link"></i>&nbsp;<a data-href="url" data-content="url" target="_blank"></a></h4>
     <p>
-      <i class="glyphicon glyphicon-tags"></i>&nbsp;
-      <span class="label label-primary" data-content="tags"></span>
+      <!-- <i class="glyphicon glyphicon-tags"></i>&nbsp; -->
+      <span class="label label-success" data-content="tags"></span>
     </p>
+    <h5 data-content="meta_og_title"></h5>
     <p data-content="meta_og_description"></p>
   </div>
 </div>
