--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -50,6 +50,9 @@
     </div>
     <div class="col-xs-8">
       <div id="alert-content"></div>
+      <div id="no-query">
+        make a first query
+      </div>
       <div id="spinner">
         <i class="glyphicon glyphicon-hourglass"></i>
       </div>
