--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -51,7 +51,7 @@
     <div class="col-xs-8">
       <div id="alert-content"></div>
       <div id="no-query">
-        make a first query
+        make the first query
       </div>
       <div id="spinner">
         <i class="glyphicon glyphicon-hourglass"></i>
