retreive list of lang and cat

--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -33,13 +33,13 @@
           <div class="display-container">
             <div class="radio">
               <label>
-                <input type="radio" name="displayOption" id="displayOptionSimple" value="simple" checked>
+                <input type="radio" name="displayOption" id="displayOptionSimple" value="simple" required>
                 Simple
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="displayOption" id="displayOptionComplete" value="complete">
+                <input type="radio" name="displayOption" id="displayOptionComplete" value="complete" required checked>
                 Complete
               </label>
             </div>
