--- a/application/backend/static/scripts/templates/results-complete.html
+++ b/application/backend/static/scripts/templates/results-complete.html
@@ -1,29 +1,12 @@
-<div class="panel panel-default result-simple">
+<div class="panel panel-default results-complete">
   <div class="panel-body">
     <h3 class="big"><span class="label label-info" data-content="score" data-format="RoundFormatter"></span> <span data-content="title"></span></h3>
-    <h4><i class="glyphicon glyphicon-link"></i>&nbsp;<a data-href="url" data-content="url" target="_blank"></a></h4>
-    <p>
+    <h4><i class="glyphicon glyphicon-link"></i>&nbsp;<a data-href="url" data-content="url" data-format="SimpleUrl" target="_blank"></a></h4>
+    <p class="results-complete-tags">
       <!-- <i class="glyphicon glyphicon-tags"></i>&nbsp; -->
-      <span class="label label-success" data-content="tags"></span>
+      <span data-content="categories"></span><span data-content="languages"></span><span data-content="parsedTags"></span>
     </p>
     <h5 data-content="meta_og_title"></h5>
     <p data-content="meta_og_description"></p>
   </div>
 </div>
-
-
-
-<!-- <div class="panel panel-default result-advanced result-url">
-  <div class="panel-body">
-    <h3><i class="glyphicon glyphicon-link"></i>&nbsp;<a href="#" target="_blank">http://localhost:8008/#</a></h3>
-    <p>
-      <i class="glyphicon glyphicon-tags"></i>&nbsp;
-      <span class="label label-default">Default</span>
-      <span class="label label-primary">Primary</span>
-      <span class="label label-success">Success</span>
-      <span class="label label-info">Info</span>
-      <span class="label label-warning">Warning</span>
-      <span class="label label-danger">Danger</span></p>
-    <p>Description</p>
-  </div>
-</div> -->
