--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -20,13 +20,12 @@
 
   <div class="row">
     <div class="col-xs-4 options-col">
-      <div class="panel panel-default">
+      <div class="panel panel-default panel-filters">
         <div class="panel-body">
           <form action="GET" id="filters-form">
-            <h4>Categories</h4>
+            <h4>Categories <span class="badge nb-categories">0</span></h4>
             <div class="categories-container"></div>
-
-            <h4>Languages</h4>
+            <h4>Languages <span class="badge nb-languages">0</span></h4>
             <div class="languages-container"></div>
           </form>
           <h4>Display</h4>
