add interactive labels

--- a/application/backend/static/css/style.css
+++ b/application/backend/static/css/style.css
@@ -169,3 +169,7 @@ body.loading {
 .results-complete-tags {
   line-height: 23px;
 }
+
+#results .results-complete-tags .label {
+  cursor: pointer;
+}
