--- a/application/backend/static/scripts/templates/checkbox.html
+++ b/application/backend/static/scripts/templates/checkbox.html
@@ -1,8 +1,9 @@
 <div class="checkbox">
   <label>
-    <input type="checkbox" data-template-bind='[
-      {"attribute": "name", "value": "type"}]'
-      data-value="name">
+    <input type="checkbox"
+      data-template-bind='[{"attribute": "name", "value": "type"}]'
+      data-value="name"
+      data-id="id">
     <span data-content-text="name"></span>
   </label>
 </div>
