--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -9,6 +9,7 @@
           <div class="form-group">
             <input id="search-input" type="text" class="form-control" placeholder="search key words">
           </div>
+          <button id="reset-button" type="reset" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i></button>
           <button id="search-button" type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
         </form>
       </div>
