--- a/application/backend/static/css/style.css
+++ b/application/backend/static/css/style.css
@@ -58,6 +58,14 @@ nav.navbar {
   top: 75px;
 }
 
+.footer {
+  position: sticky;
+  padding-bottom: 25px;
+  bottom: 0px;
+  background-color: white;
+  box-shadow: 0px 15px 10px 30px #fff;
+}
+
 
 /******************************************************************************
 **  SPINNER
