--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -53,7 +53,7 @@
     <div class="col-xs-8">
       <div id="alert-content"></div>
       <div id="no-query">
-        make the first query
+        make a query
       </div>
       <div id="spinner">
         <i class="glyphicon glyphicon-hourglass"></i>
