--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -24,12 +24,14 @@
       <div class="panel panel-default panel-filters">
         <div class="panel-body">
           <form action="GET" id="filters-form">
-            <h4><span class="label label-success">&nbsp;</span> Tags <span class="badge nb-tags">0</span></h4>
-            <div class="tags-container"></div>
             <h4><span class="label label-primary">&nbsp;</span> Categories <span class="badge nb-categories">0</span></h4>
             <div class="categories-container"></div>
             <h4><span class="label label-danger">&nbsp;</span> Languages <span class="badge nb-languages">0</span></h4>
             <div class="languages-container"></div>
+            <h4><span class="label label-warning">&nbsp;</span> Tools <span class="badge nb-tools">0</span></h4>
+            <div class="tools-container"></div>
+            <h4><span class="label label-success">&nbsp;</span> Tags <span class="badge nb-tags">0</span></h4>
+            <div class="tags-container"></div>
           </form>
           <h4>Display</h4>
           <div class="display-container">
