--- a/application/backend/static/css/style.css
+++ b/application/backend/static/css/style.css
@@ -165,8 +165,18 @@ body.loading {
 }
 
 .panel-filters {
-  max-height: 80vh;
+  max-height: 85vh;
   overflow-x: scroll;
+  box-sizing: border-box;
+}
+.panel-filters h4 {
+  position: sticky;
+  top: 0px;
+  background-color: white;
+  z-index: 10;
+  margin: 0;
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 
 #results h3.big {
