--- a/application/backend/static/scripts/templates/results-complete.html
+++ b/application/backend/static/scripts/templates/results-complete.html
@@ -4,7 +4,7 @@
     <h4><i class="glyphicon glyphicon-link"></i>&nbsp;<a data-href="url" data-content="url" data-format="SimpleUrl" target="_blank"></a></h4>
     <p class="results-complete-tags">
       <!-- <i class="glyphicon glyphicon-tags"></i>&nbsp; -->
-      <span data-content="categories"></span><span data-content="languages"></span><span data-content="parsedTags"></span>
+      <span data-content="categories"></span><span data-content="languages"></span><span data-content="tools"></span><span data-content="parsedTags"></span>
     </p>
     <h5 data-content="meta_og_title"></h5>
     <p data-content="meta_og_description"></p>
