--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -63,7 +63,13 @@
       <div id="no-results">
         no result found
       </div>
-      <div id="results"></div>
+      <div id="results">
+        <div class="header"></div>
+        <div class="content"></div>
+      </div>
+      <div class="has-more">
+        <a id="load-more" class="btn btn-default btn-block" href="#" role="button">Load more</a>
+      </div>
       <div class="footer">
         Copyright &copy; 2017 N. Huguenin, M. Caraccio and J. Gugger – All Rights Reserved.
       </div>
