add title and logo in nav bar

--- a/application/backend/templates/index.html
+++ b/application/backend/templates/index.html
@@ -4,7 +4,13 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header navbar-center row">
-      <div class="col-xs-8 col-xs-offset-4">
+      <div class="col-xs-4">
+        <a class="navbar-brand" href="#">
+            <img src="/static/images/ctf-logo.png" style="display:inline !important;" width="30" height="30" class="d-inline-block align-top" alt="">
+            CTF SEARCH
+          </a>
+      </div>
+      <div class="col-xs-8">
         <form>
           <div class="form-group">
             <input id="search-input" type="text" class="form-control" placeholder="search key words">
